# monad-trade

./: .gitattributes  .gitignore  LICENSE  README.md  cabal.project  flake.nix  index.js  monad-trade.cabal  package-lock.json  package.json
app/: Main.hs
css/: main.css  sidebar.css
materialized/cabal/: default.nix
materialized/ghcid/: default.nix
materialized/haskell-language-server/: default.nix
materialized/hoogle/: default.nix
materialized/monad-trade/: default.nix
materialized/monad-trade/.plan.nix/: monad-trade.nix
nix/: gcroot.nix
nix/wine/: flake.nix
scripts/: build-linux.sh  build-windows.sh  ghcid.sh  hoogle.sh  materialize.sh
src/: Interface.hs  Lib.hs
src/Interface/: Sidebar.hs
src/Interface/Page/: Audio.hs  General.hs  Hotkey.hs  Macro.hs
test/: Main.hs
