cabal-version: 2.4
name: monad-trade
version: 0.1.0.0
license: MIT

library
  exposed-modules:
    Lib,
    Interface,
    Interface.Sidebar,
    Interface.Page.Audio,
    Interface.Page.General,
    Interface.Page.Hotkey,
    Interface.Page.Macro
  hs-source-dirs: src
  ghc-options:
    -- -fplugin=Polysemy.Plugin
    -O2
    -flate-specialise
    -fspecialise-aggressively
    -Wall
    -Wno-name-shadowing
  extensions:
    OverloadedStrings,
    QuasiQuotes,
    TypeApplications,
    LambdaCase,
    ScopedTypeVariables
  build-depends:
    base ^>= 4.15.1.0,
    threepenny-gui,
    string-interpolate,
    string-conversions,
    unliftio
  
  if os(windows)
    build-depends: Win32

executable monad-trade
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options:
    -- -fplugin=Polysemy.Plugin
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -O2
    -flate-specialise
    -fspecialise-aggressively
    -Wall
    -Wno-name-shadowing
  build-depends: base ^>= 4.15.1.0, monad-trade

test-suite monad-trade-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options:
    -- -fplugin=Polysemy.Plugin
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Wno-name-shadowing
  build-depends: base ^>= 4.15.1.0, monad-trade